syntax = "proto3";

package datap;

option go_package = "github.com/andrew-delph/my-key-store/datap";

// The greeting service definition.
service InternalNodeService {

  // set a value on another node
  rpc SetRequest (Value) returns (StandardObject);

  // get a value from another node
  rpc GetRequest (GetRequestMessage) returns (Value) ;

  // request to stream buckets from a partition back to the client
  rpc StreamBuckets(StreamBucketsRequest) returns (stream Value);

  // get a EpochTree from another node
  rpc GetEpochTree(EpochTreeObject) returns (EpochTreeObject);

  rpc GetEpochTreeLastValid(EpochTreeObject) returns (EpochTreeObject);

  rpc PartitionsHealthCheck(StandardObject) returns (StandardObject);

  rpc UpdateMembers(Members) returns (StandardObject);

  rpc UpdateEpoch(StandardObject) returns (StandardObject);
  
}

message StandardObject {
  bool error = 1;
  string message = 2;
}

message TempNode {
  string name = 1;
}


message GetRequestMessage {
  string key = 1;
}

message Value{
  string key = 1;
  string value = 2;
  int64 unix_timestamp = 3;
  int64 epoch  =4;
}

message StreamBucketsRequest{
  int64 LowerEpoch = 1;
  int64 UpperEpoch = 2;
  int32 partition = 3;
  repeated int32 buckets =4;
}

message EpochTreeObject{
  int32 partition = 1;
  int64 lower_epoch = 2;
  int64 upper_epoch = 3;
  repeated bytes buckets =4;
  repeated int32 buckets_size =5;
  bool valid =6;
   int32 items =7;
}

message Fsm{
  int64 epoch = 1;
  repeated string members = 2;
  repeated string temp_members = 3;
}

message Members{
  repeated string members = 1;
  repeated string temp_members = 2;
}


