syntax = "proto3";

package video_call;

option go_package = "github.com/andrew-delph/my-key-store/proto";

// The greeting service definition.
service InternalNodeService {

  rpc TestRequest (StandardResponse) returns (StandardResponse) {
  }

    rpc SetRequest (StandardResponse) returns (StandardResponse) {
    }

    rpc GetRequest (StandardResponse) returns (StandardResponse) {
    }
  
}

message StandardResponse {
  bool error = 1;
  string message = 2;
}
